首页样式完成

--- a/steptu/Web/Tpl/index/Index/index.html
+++ b/steptu/Web/Tpl/index/Index/index.html
@@ -101,7 +101,7 @@ jQuery(document).ready(function($) {
   <option value="洲际酒店">洲际酒店</option>
 </select>
   
-  <div style="position:absolute;left:50px;top:180px;"><input type="image" src="../Public/images/search.png" ></div>
+  <div style="position:absolute;left:50px;top:180px;"><input type="image" src="../Public/images/search.png" style="border:0;" ></div>
   </form>
   </div>
   <img src="../Public/images/zhufenge.png" class="zhufenge">
@@ -138,9 +138,21 @@ jQuery(document).ready(function($) {
 </div>
 
 
-<div class="bottom">
-	
-</div>
+<div class="bottom"></div>
+  <div class="bottomsm"><span class="bottombiao">旅游超市</span><div class="bottomxuanxiang">住<br>吃货</div></div>
+  <div class="bottompersonal"><span class="bottombiao">会员中心</span><div class="bottomxuanxiang1">我的订单<br>我的奖励<br>我的积分<br>我的评价<br>我的信息<br>我的储钱罐旅行计划</span><br>找朋友</div> </div>
+  <div class="bottombook"><span class="bottombiao">旅游志</span><div class="bottomxuanxiang">旅游随感<br>写给未来的信</div></div>
+ <div class="weishenme"><span class="bottombiao">主题旅游</span><div class="bottomxuanxiang">城市之间<br>学子游<br>年休假<br>美食游</div></div>
+  <div class="bottomaboutus"><span class="bottombiao">关于游记</span><div class="bottomxuanxiang">关于我们<br>联系我们<br>一起合作<br>用户协议<br>诚聘英才</div></div>
+
+
+<img src="../Public/images/steptu.png" class="steptu">
+<img src="../Public/images/banquan.png" class="banquan">
+<img src="../Public/images/renzhengwang.png" class="renzhengwang">
+<img src="../Public/images/kexin.png" class="kexin">
+<img src="../Public/images/chengxin.png" class="chengxin">
+
+
 
 
 </div>
