--- a/steptu/Web/Tpl/index/package/package.html
+++ b/steptu/Web/Tpl/index/package/package.html
@@ -25,7 +25,13 @@ jQuery(document).ready(function($) {
 <script src="../Public/js/jquery.js"></script>
 <script src="../Public/js/fun.js"></script>
 </head>
-	<body >
+
+
+
+
+
+
+<body >
 		  <STYLE TYPE="text/css">
 
 <!--
@@ -41,77 +47,89 @@ background-repeat: no-repeat;
 -->
 </STYLE> 
 <div class="quanbu">
-	<img src="../Public/images/package/youhuitiao1.png" class="youhuitiao1">
-<div class="contentbg"></div>
-<div class="content">
-	<div id="taocanbiaoti" class="taocanbiaoti">
-    [五一]<九寨沟-黄龙双汽3日游>王牌产品
-</div>
-<div class="yulantu">
-</div>
-<div class="jiagerili" >
-	<div class="calendar">
-   
-
-<div class="outer clearfix" id="calendarcontainer"> 
-
-</div>
-   
-
-</div> 
-</div>
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<img src="../Public/images/xuanchuan.png"class="xuanchuan">
-   <img src="../Public/images/travelsm.png" class="travelsm">
+	
+	<img src="../Public/images/travelsm.png" class="travelsm">
    <img src="../Public/images/personal.png"class="personal">
    <img src="../Public/images/travel.png" class="travel" >
    <img src="../Public/images/makeplan.png" class="makeplan">
    <img src="../Public/images/index.png"class="index">
    <img src="../Public/images/yuan.png"class="yuan">
    <img src="../Public/images/travelbook.png"class="travelbook">
+<img src="../Public/images/xuanchuan.png"class="xuanchuan">
+
+
+
+
+
+
+
+<a href="javascript:;"class=" btn-large theme-login" style=""><img src="../Public/images/login.png"   class="login"></a>
 <img src="../Public/images/register.png"class="register">
 
 
-<div ><a href="javascript:;"class=" btn-large theme-login"><img src="../Public/images/login.png"class="login"></a>
+
+<div class="zhongyang">
+<div class="content">
+	
+<div id="taocanbiaoti" class="taocanbiaoti">
+    [五一]<九寨沟-黄龙双汽3日游>王牌产品
+</div>
+<div class="yulantu">
+</div>
+<div class="jiagerili" >
+	<div class="calendar">
+   <div class="outer clearfix" id="calendarcontainer"> </div></div> 
+</div>
+<img src="../Public/images/package/youhuijiakuang.png" class="youhuijiakuang">
+<div class="youhuijiazi">优惠价: ￥<div class="youhuijia" id="youhuijia">1140</div><div class="youhuijiazi2">起</div></div>
+<div class="feiyongshuoming"></div>
+<div class="yudinglan">
+</div>
+<div class="youhuihuodong"></div>
+<div class="youhuihuodong2"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
-<div class="bottom"></div>
-  <div class="bottomsm"><span class="bottombiao">旅游超市</span><div class="bottomxuanxiang">住<br>吃货</div></div>
-  <div class="bottompersonal"><span class="bottombiao">会员中心</span><div class="bottomxuanxiang1">我的订单<br>我的奖励<br>我的积分<br>我的评价<br>我的信息<br>我的储钱罐旅行计划</span><br>找朋友</div> </div>
-  <div class="bottombook"><span class="bottombiao">旅游志</span><div class="bottomxuanxiang">旅游随感<br>写给未来的信</div></div>
- <div class="weishenme"><span class="bottombiao">主题旅游</span><div class="bottomxuanxiang">城市之间<br>学子游<br>年休假<br>美食游</div></div>
-  <div class="bottomaboutus"><span class="bottombiao">关于游记</span><div class="bottomxuanxiang">关于我们<br>联系我们<br>一起合作<br>用户协议<br>诚聘英才</div></div>
+<div class="bottom">
+<div class="bottomsm">
+	<span class="bottombiao">旅游超市</span><div class="bottomxuanxiang">住<br>吃货</div>
+</div>
+<div class="bottomsm">
+	<span class="bottombiao">会员中心</span><div class="bottomxuanxiang1">我的订单<br>我的奖励<br>我的积分<br>我的评价<br>我的信息<br>我的储钱罐旅行计划</span><br>找朋友</div> 
+</div>
+<div class="bottomsm">
+	<span class="bottombiao">旅游志</span><div class="bottomxuanxiang">旅游随感<br>写给未来的信</div>
+</div>
+<div class="bottomsm">
+	<span class="bottombiao">主题旅游</span><div class="bottomxuanxiang">城市之间<br>学子游<br>年休假<br>美食游</div>
+</div>
 
+<div class="bottomsm">
+	<span class="bottombiao">关于游记</span><div class="bottomxuanxiang">关于我们<br>联系我们<br>一起合作<br>用户协议<br>诚聘英才</div>
+</div>
 
 <img src="../Public/images/package/steptu.png" class="steptu">
 
@@ -119,8 +137,47 @@ background-repeat: no-repeat;
 <img src="../Public/images/kexin.png" class="kexin">
 <img src="../Public/images/chengxin.png" class="chengxin">
 
+</div>
+
+
+
+
+
+
+
+
+
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
 <script src="../Public/js/package.js" type="text/javascript"></script>
 <div class="theme-popover">
      <div class="theme-poptit">
@@ -198,6 +255,7 @@ background-repeat: no-repeat;
 
     }  
 </script>
+
 
 </body>
 </html>
