--- a/steptu/Web/Tpl/index/Index/register.html
+++ b/steptu/Web/Tpl/index/Index/register.html
@@ -41,7 +41,8 @@
                         <li><strong>密码：</strong><label><input class="ipt" type="password" name="pwd" size="20" id="password" required></label></li>
                         <li><strong>确认密码：</strong><label><input class="ipt" type="password" name="confirm" size="20" id="confpassword" required></label></li>
                         <li><strong>邮箱：</strong><label><input class="ipt" type="email" name="log" size="20" required></label></li>
-                        <li><strong>验证码：</strong><label><input class="ipt" type="text" name="log" size="20" style="width: 20%" required>&nbsp;<img src="{:U('Index/loginVerify/identify')}" id="code"/><a href="javascript:void(change_code(this));">看不清</a></label></li><br/><br/>
+                        <li><strong>手机号：</strong><label><input class="ipt" type="tel" name="log" size="20" required></label></li>
+                        <li><strong>验证码：</strong><label><input class="ipt" type="text" name="log" size="20" style="width: 20%" required>&nbsp;<img src="{:U('Index/loginVerify/identify')}" id="code"/><a href="javascript:void(change_code(this));">看不清</a></label></li><br/>
                     </ol>
                     <script>
                         var verifyURL = "{:U('Index/loginVerify/identify','','')}";
