Modified register pages, improve and perfect travelFelling & futureLetter pages.

--- a/steptu/Web/Tpl/index/travelBook/travelBook.html
+++ b/steptu/Web/Tpl/index/travelBook/travelBook.html
@@ -46,7 +46,7 @@
 						<div class="information">
 							<img src="../Public/images/travelBook/headimg.png" class="imgeye">
 							<div class="titlebox">
-								<a href=""><p style="color: #0055FF"><b>【一路向西，走进伊利】伊犁花的海洋</b></p></a><br/>
+								<a href="felling.html"><p style="color: #0055FF"><b>【一路向西，走进伊利】伊犁花的海洋</b></p></a><br/>
 								<a href="">几米不会错</a> &nbsp;&nbsp;&nbsp;&nbsp;<span id="dataBox"></span>&nbsp;&nbsp;&nbsp;&nbsp;
 								<img src="../Public/images/travelBook/eye.png" style="height: 13px;">&nbsp;<span id="readerNumber"></span>&nbsp;&nbsp;&nbsp;&nbsp;
 								<img src="../Public/images/travelBook/message.png" style="height: 13px">&nbsp;<span id="replayNumber"></span>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -68,7 +68,7 @@
 						<div class="information">
 							<img src="../Public/images/travelBook/headimg.png" class="imgeye">
 							<div class="titlebox">
-								<a href=""><p style="color: #0055FF"><b>【一路向西，走进伊利】伊犁花的海洋</b></p></a><br/>
+								<a href="felling.html"><p style="color: #0055FF"><b>【一路向西，走进伊利】伊犁花的海洋</b></p></a><br/>
 								<a href="">几米不会错</a> &nbsp;&nbsp;&nbsp;&nbsp;<span id="dataBox"></span>&nbsp;&nbsp;&nbsp;&nbsp;
 								<img src="../Public/images/travelBook/eye.png" style="height: 13px;">&nbsp;<span id="readerNumber"></span>&nbsp;&nbsp;&nbsp;&nbsp;
 								<img src="../Public/images/travelBook/message.png" style="height: 13px">&nbsp;<span id="replayNumber"></span>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -95,7 +95,7 @@
 							<div class="information" style="margin-top: 5px">
 								<img src="../Public/images/travelBook/headimg.png" class="imgeye" style="float: left">
 								<div class="titlebox">
-									<p><b>【一路向西，走进伊利】伊犁花的海洋</b></p><br/>
+									<p><a href="letter.html"> <b>【一路向西，走进伊利】伊犁花的海洋</b></a></p><br/>
 									几米不会错 &nbsp;&nbsp;&nbsp;&nbsp;<span id="dataBoxLetter" style="float: right"></span>
 								</div>
 							</div>
@@ -111,7 +111,7 @@
 							<div class="information" style="margin-top: 5px">
 								<img src="../Public/images/travelBook/headimg.png" class="imgeye" style="float: left">
 								<div class="titlebox">
-									<p><b>【一路向西，走进伊利】伊犁花的海洋</b></p><br/>
+									<p><a href="letter.html"><b>【一路向西，走进伊利】伊犁花的海洋</b></a></p><br/>
 									几米不会错 &nbsp;&nbsp;&nbsp;&nbsp;<span id="dataBoxLetter" style="float: right"></span>
 								</div>
 							</div>
