--- a/steptu/Web/Tpl/index/Index/registerConfirm.html
+++ b/steptu/Web/Tpl/index/Index/registerConfirm.html
@@ -34,15 +34,19 @@
         <p style="font-size: 20px;color: darkgray">欢迎您注册游迹旅游网</p><br>
         <div class="mainbox">
             <img src="../Public/images/register/word_2.png">
-            <div class="theme-popbod dform">
-                <form class="theme-signin" name="form" style="padding-top: 10%;padding-left: 0.5%" action="#" method="post">
-                    <ol>
-                        <li><strong>确认手机号：</strong><label><input class="ipt" type="tel" size="20" required></label></li>
-                        <li><strong>校验码：</strong><label><input class="ipt" type="number" size="20" style="width: 20%">&nbsp;&nbsp;<input class="btn btn-active" type="submit" value="发送至手机"></label></li>
-                       </ol>
-                    <br/><br/>
-                    <input class="btn btn-primary" type="submit" name="submit" value=" 提    交 " style="left: 82px">
-                </form>
+            <form class="infoBox">
+                校验码已发送至 <span>13012345678</span><br/><br/>
+                请在24小时内完成验证<br/><br/><br/><br>
+                <label><span>校验码：</span><input type="number"></label><br/>
+                <button class="btn btn-primary">  提  交   </button>
+            </form>
+            <div class="tipsBox">
+                <div class="tips">
+                    没有收到验证码？您可以<br/><br/>
+                    <button>重新获取</button><br/><br/>
+                    或<br/><br/>
+                    <a>修改手机号</a>
+                </div>
             </div>
         </div>
     </div>
