--- a/steptu/Web/Tpl/index/Index/register.html
+++ b/steptu/Web/Tpl/index/Index/register.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../Public/css/index.css" media="all" type="text/css">
     <title>注册</title>
-    <!--<script src="../Public/js/jquery-easyui-1.4.2/jquery.min.js"></script>-->
+    <script src="../Public/js/jquery-easyui-1.4.2/jquery.min.js"></script>
+    <script type="text/javascript" src='../Public/js/jquery.form.js'></script>
     <script src="../Public/js/register.js"></script>
     <link rel="stylesheet" type="text/css" href="../Public/js/jquery-easyui-1.4.2/themes/default/easyui.css">
     <link rel="stylesheet" type="text/css" href="../Public/js/jquery-easyui-1.4.2/themes/icon.css">
     <link rel="stylesheet" type="text/css" href="../Public/js/jquery-easyui-1.4.2/demo/demo.css">
     <link rel="stylesheet" href="../Public/css/css.css" media="all">
     <link href="../Public/css/register.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
 <div class="quanbu">
@@ -35,29 +37,39 @@
         <div class="mainbox">
             <img src="../Public/images/register/word_1.png">
             <div class="theme-popbod dform">
-                <form class="theme-signin" name="form" action="#" method="post">
+                <form class="theme-signin" name="form" action="{:U('Index/index/registerConfirm')}" method="post" id='form'>
                     <ol>
-                        <li><strong>用户名：</strong><label><input class="ipt" type="text" name="log" size="20" required></label></li>
-                        <li><strong>密码：</strong><label><input class="ipt" type="password" name="pwd" size="20" id="password" required></label></li>
-                        <li><strong>确认密码：</strong><label><input class="ipt" type="password" name="confirm" size="20" id="confpassword" required></label></li>
-                        <li><strong>邮箱：</strong><label><input class="ipt" type="email" name="log" size="20" required></label></li>
-                        <li><strong>手机号：</strong><label><input class="ipt" type="tel" name="log" size="20" required></label></li>
-                       
+                         <li><strong>用户名：</strong><label><input class="ipt" type="text" id="name" name="name" size="20" required></label></li> 
+                        <li><strong>密码：</strong><label><input class="ipt" type="password" id="password" name='password' size="20" required></label></li>
+                        <li><strong>确认密码：</strong><label><input class="ipt" type="password" id="userSecondSecurity" name='userSecondSecurity' size="20" required></label></li>
+                        <li><strong>邮箱：</strong><label><input class="ipt" type="email" name='email' id="email" size="20" required></label></li>
+                        <li><strong>手机号：</strong><label><input class="ipt" type="tel" id="phone" name='phone' size="20" required></label></li>
+                        <br/>
                     </ol>
-            
-                    <label style="padding-left: 70px"><input type="checkbox" value="">愿意接受免费的旅游咨询<br/></label><br/>
+                    <label style="padding-left: 70px"><input type="checkbox" value="" required>愿意接受免费的旅游咨询<br/></label><br/>
                     <label style="padding-left: 70px"><input type="checkbox" value="" required>我已阅读并接受了<a href="">注册协议</a></label><br/><br/>
-                    <input class="btn btn-primary" type="submit" name="submit" value=" 提 交 注 册 " style="left: 70px" onclick="isEnterLegal()">
+                    <input class="btn btn-primary"  name="submit" value=" 提 交 注 册 " style="left: 70px" onclick="return isEnterLegal()" id="btn">
                 </form>
                 <script type="text/javascript">
                     function isEnterLegal(){
                         var password,confpassword;
                         password = document.getElementById("password").value;
-                        confpassword = document.getElementById("confpassword").value;
+                        confpassword = document.getElementById("userSecondSecurity").value;
                         if(password != confpassword){
                             alert("请确认两次密码输入一致");
                             return false;
                         }
+                        else{
+                        $.post("{:U('Index/register/register')}",
+                            {name:$('#name').val(),password:$('#password').val(),userSecondSecurity:$('#userSecondSecurity').val(),email:$('#email').val(),phone:$('#phone').val()},
+                            function(data) {
+                                if(data['code'] == 0){
+                                    alert(data['msg']);
+                                }else{
+                                    window.location.href="{:U('Index/index/registerConfirm')}";
+                                }
+                        });
+                    }
                     }
                 </script>
             </div>
