修改了表单必填项

--- a/steptu/Web/Tpl/index/makePlan/makePlan.html
+++ b/steptu/Web/Tpl/index/makePlan/makePlan.html
@@ -62,7 +62,7 @@ background-color: #d2dffe;
 position:relative;top:15px;left:20px;">发起活动</span></div>
   <form action="" name="huodongsousuo" method="post">
       <div style="position:relative;left:10px;top:10px;font-size:14px;">活动时间</div>
-        <div style="position:relative;top:15px;left:10px;"><input name="mphuodongshijian" id="mphuodongshijian" type="text" value=""style="width:150px;" class="easyui-datebox" data-options="formatter:myformatter,parser:myparser"/> </div>
+        <div style="position:relative;top:15px;left:10px;"><input name="mphuodongshijian" id="mphuodongshijian" type="text" value=""style="width:150px;" class="easyui-datebox" required="required"data-options="formatter:myformatter,parser:myparser" /> </div>
         <div style="position:relative;left:10px;top:25px;font-size:14px;">活动始发地</div>
          <input name="mpshifadi" id="mpshifadi" type="text" value="" style="position:relative;left:10px;top:30px;font-size:14px;border:1px solid #83a9e1;border-radius:4px;"/>
          <div style="position:relative;left:10px;top:40px;font-size:14px;">活动目的地</div>
@@ -75,7 +75,7 @@ position:relative;top:15px;left:20px;">发起活动</span></div>
             <input name="mpfaqiren" id="mpfaqiren" type="text" value="" style="position:relative;left:10px;top:90px;font-size:14px;border:1px solid #83a9e1;border-radius:4px;"/>
              <div style="position:relative;left:10px;top:100px;font-size:14px;">活动备注</div>
               <textarea name="mpcontent" cols="16" rows="4" style="position:relative;left:10px;top:105px;font-size:15px;border: 1px solid #83a9e1;" ></textarea>
-              <div style="position:absolute;top:575px;left:10px;color:#0032d3"><input name="checkbox" type="checkbox" checked="checked" value="checkbox" style="position:relative;top:-3px;">
+              <div style="position:absolute;top:575px;left:10px;color:#0032d3"><input name="checkbox" type="checkbox" checked="checked" value="checkbox" style="position:relative;top:-3px;" required="required">
      已阅读并同意相关法律条约
     </div>
     <div style="position:absolute;left:40px;top:610px; cursor: pointer;"><input type="image" src="../Public/images/makeplan/wancheng.png" style="border:0;" ></div>
